--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@slidev/cli": "^51.3.0",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
-    "@twitwi/slidev-addon-ultracharger": "github:twitwi/slidev-addon-ultracharger",
+    "@twitwi/slidev-addon-ultracharger": "^1.1.3",
     "markdown-it-attrs": "^4.3.1",
     "vue": "^3.5.13"
   }
